<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_searchable"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#cfd8dc"
    android:orientation="vertical"
    tools:context="com.example.eddy.musicplayer.SearchableActivity">

    <TextView
        android:id="@+id/searchResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_results_text"
        android:textSize="20sp"
        android:textColor="#263238"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"/>

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#cfd8dc"
        android:scrollbars="none" />

    <RelativeLayout
        android:id="@+id/relativeLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_android_image"
        android:visibility="gone" >

        <TextView
            android:id="@+id/songNameTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="#607d8b"
            android:layout_margin="5dp" />

        <ImageView
            android:id="@+id/previousActionSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/previous"
            android:title="@string/previous"
            android:clickable="true"
            android:background="@drawable/ripple_effect_android_image"
            android:layout_below="@+id/songNameTextSearch"
            android:layout_margin="5dp" />

        <ImageView
            android:id="@+id/pauseActionSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/play2"
            android:title="@string/pause"
            android:clickable="true"
            android:background="@drawable/ripple_effect_android_image"
            android:layout_toRightOf="@+id/previousActionSearch"
            android:layout_below="@+id/songNameTextSearch"
            android:layout_margin="5dp" />

        <ImageView
            android:id="@+id/nextActionSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/next"
            android:title="@string/next"
            android:clickable="true"
            android:background="@drawable/ripple_effect_android_image"
            android:layout_toRightOf="@+id/pauseActionSearch"
            android:layout_below="@+id/songNameTextSearch"
            android:layout_margin="5dp" />
    </RelativeLayout>

</LinearLayout>
