<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#607d8b"
    tools:context="com.example.eddy.musicplayer.NowPlaying">

    <ImageView
        android:id="@+id/musicArt"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/musicart"
        android:title="@string/music_art"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"/>

    <TextView
        android:id="@+id/nowPlayingSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/musicArt"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <TextView
        android:id="@+id/nowPlayingArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/nowPlayingSongName"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_margin="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="#607d8b"
        android:layout_below="@+id/nowPlayingArtist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/previousAction"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/previous"
            android:title="@string/previous"
            android:clickable="true"
            android:background="@drawable/ripple_effect_android_image"
            android:layout_margin="15dp"
            android:layout_toLeftOf="@+id/pauseAction"/>

        <ImageView
            android:id="@+id/pauseAction"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/play2"
            android:title="@string/pause"
            android:clickable="true"
            android:background="@drawable/ripple_effect_android_image"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp" />

        <ImageView
            android:id="@+id/nextAction"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/next"
            android:title="@string/next"
            android:clickable="true"
            android:background="@drawable/ripple_effect_android_image"
            android:layout_toRightOf="@+id/pauseAction"
            android:layout_margin="15dp" />

    </RelativeLayout>
</RelativeLayout>